Gets rid of transform style on .fa, which was triggering a weird visibility bug in Chrome.

--- a/static/src/stylesheets/global.less
+++ b/static/src/stylesheets/global.less
@@ -6,3 +6,7 @@ body {
   -webkit-font-smoothing: subpixel-antialiased;
 
 }
+
+.fa {
+  .transform(initial);
+}
